--- a/stanton.html
+++ b/stanton.html
@@ -163,25 +163,19 @@
           <br>
           <div class="alert alert-info" >
             I take no ownership of the scans below. They were scanned by myself during my ongoing research at the Iowa State University Archives, located in the Parks Library on campus.
+            Each page consists of two separate high-definition scans, which were stitched together by myself. I am in the process of cleaning up page 1 to make it more readable, and will update this
+            page as I progress.
           </div>
           <br>
           <br>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/01.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/01.png" alt="01" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/02.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/02.png" alt="02" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/03.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/03.png" alt="03" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/04.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/04.png" alt="04" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/05.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/05.png" alt="05" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/06.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/06.png" alt="06" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/07.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/07.png" alt="07" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/08.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/08.png" alt="08" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/09.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/09.png" alt="09" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/10.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/10.png" alt="10" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/11.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/11.png" alt="11" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/12.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/12.png" alt="12" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/13.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/13.png" alt="13" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/14.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/14.png" alt="14" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/15.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/15.png" alt="15" style="width:500px;"></a></center></p>
-          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/16.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/16.png" alt="16" style="width:500px;"></a></center></p>
+          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page1_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page1_Stitched.png" alt="01" style="width:500px;"></a></center></p>
+          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page2_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page2_Stitched.png" alt="02" style="width:500px;"></a></center></p>
+          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page3_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page3_Stitched.png" alt="03" style="width:500px;"></a></center></p>
+          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page4_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page4_Stitched.png" alt="04" style="width:500px;"></a></center></p>
+          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page5_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page5_Stitched.png" alt="05" style="width:500px;"></a></center></p>
+          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page6_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page6_Stitched.png" alt="06" style="width:500px;"></a></center></p>
+          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page7_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page7_Stitched.png" alt="07" style="width:500px;"></a></center></p>
+          <p><center><a href="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/Page8_Stitched.png"><img src="http://www.dersche.id/assets/img/microfilm/1895/stantonAtRest/preview/Page8_Stitched.png" alt="08" style="width:500px;"></a></center></p>
         </div>
       </div>
     </div>
