--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -27,9 +27,12 @@
       <div class="row">
         <div class="col-md-12">
           <br>
-          <p><center>
-            <img style="width:500px; border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/Corona3BW__3.jpg"
-            alt="1918 Corona 3 Black & White"></center>
+          <p>
+            <center>
+              <img style="width:500px; border:1px solid black;"
+              src="http://www.dersche.id/assets/img/typewriters/1918Corona3__Distressed.jpg"
+              alt="1918 Corona 3, Distressed">
+            </center>
           </p>
           <hr>
           <p>I have been collecting typewriters since June of 2012. Currently, my collection consists of somewhere
