--- a/typewriterOtherInfo.html
+++ b/typewriterOtherInfo.html
@@ -27,7 +27,13 @@
       <div class="row">
         <div class="col-md-12">
           <br>
-          <p><center><img style="width:500px; border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/1939CoronaSterlingSepia.jpg" alt="1939 Corona Sterling Sepia"></center></p>
+          <p>
+            <center>
+              <img style="width:500px; border:1px solid black;"
+              src="http://www.dersche.id/assets/img/typewriters/1939CoronaStandard__Distressed.jpg"
+              alt="1939 Corona Standard, Distressed">
+            </center>
+          </p>
           <hr>
           <p>
 
