--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -27,7 +27,13 @@
       <div class="row">
         <div class="col-md-12" style="min-height:800px;">
           <br>
-          <p><center><img style="width:500px; border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/CoronaFourBW__2.jpg" alt="1925 Corona Four Black & White"></center></p>
+          <p>
+            <center>
+              <img style="width:500px; border:1px solid black;"
+              src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour__Distressed.jpg"
+              alt="1925 Corona Four, Distressed">
+            </center>
+          </p>
           <hr>
           <div class="alert alert-info" >
             This list is probably in chronological order of the date of manufacture, but no guarantees are made.
