--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -27,7 +27,13 @@
       <div class="row">
         <div class="col-md-12">
           <br>
-          <p><center><img style="width:500px; border:1px solid black;" src="http://www.dersche.id/assets/img/typewriters/CoronaStandardBW__2.jpg" alt="1936 Corona Standard Black & White"></center></p>
+          <p>
+            <center>
+              <img style="width:500px; border:1px solid black;"
+              src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard__Distressed.jpg"
+              alt="1936 Corona Standard, Distressed">
+            </center>
+          </p>
           <hr>
           <div class="alert alert-info" >
             This is a list of the typewriters on my wishlist. If you might be able to help me check one off, let me know! You can email me using the contact page.
