--- a/Coronas.html
+++ b/Coronas.html
@@ -35,7 +35,14 @@
           <div class="alert alert-info" >
             Welcome to the Corona Page! This page is dedicated to my personal favorite brand of typewriters: Corona, and later Smith Corona.
           </div>
-          
+          <br>
+          <p>
+            <center>
+              <img style="width:500px; border:1px solid black;"
+              src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard__Distressed.jpg"
+              alt="1936 Corona Standard, Distressed">
+            </center>
+          </p>
         </div>
       </div>
     </div>
