--- a/typewriterOtherInfo.html
+++ b/typewriterOtherInfo.html
@@ -30,8 +30,8 @@
           <p>
             <center>
               <img style="width:500px; border:1px solid black;"
-              src="http://www.dersche.id/assets/img/typewriters/1939CoronaStandard__Distressed.jpg"
-              alt="1939 Corona Standard, Distressed">
+              src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling__Distressed.jpg"
+              alt="1949 Smith-Corona Sterling, Distressed">
             </center>
           </p>
           <hr>
