--- a/coronas.html
+++ b/coronas.html
@@ -32,9 +32,6 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12" style="min-height:800px;">
-          <div class="alert alert-info" >
-            Welcome to the Corona Page! This page is dedicated to my personal favorite brand of typewriters: Corona, and later Smith Corona.
-          </div>
           <br>
           <p>
             <center>
@@ -43,6 +40,64 @@
               alt="1936 Corona Standard, Distressed">
             </center>
           </p>
+            <div class="alert alert-info" >
+              Welcome to the Corona Page! This page is dedicated to my personal favorite brand of typewriters: Corona, and later Smith Corona.
+            </div>
+          <hr>
+          <ol>
+            <li>
+              <strong>1918 Corona 3 </strong><a href="http://www.dersche.id/typewriters/1918Corona3.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/thumbnail.jpg" alt="1918 Corona 3" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1925 Corona Four </strong><a href="http://www.dersche.id/typewriters/1925CoronaFour.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour/thumbnail.jpg" alt="1925 Corona Four" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1926 Corona Four </strong><a href="http://www.dersche.id/typewriters/1926CoronaFour.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/thumbnail.jpg" alt="1926 Corona Four" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1927 Corona Four </strong><a href="http://www.dersche.id/typewriters/1927CoronaFour.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/thumbnail.jpg" alt="1927 Corona Four" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1936 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1936CoronaStandard.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/thumbnail.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1936 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1936CoronaStandard2.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard2/thumbnail.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1939 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1939CoronaStandard.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1939CoronaStandard/thumbnail.jpg" alt="1939 Corona Standard" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1939 Corona Sterling </strong><a href="http://www.dersche.id/typewriters/1939CoronaSterling.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1939CoronaSterling/thumbnail.jpg" alt="1939 Corona Sterling" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1946 Smith Corona Silent </strong><a href="http://www.dersche.id/typewriters/1946SmithCoronaSilent.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1946SmithCoronaSilent/thumbnail.jpg" alt="1946 Smith Corona Silent" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1949 Smith Corona Sterling </strong><a href="http://www.dersche.id/typewriters/1949SmithCoronaSterling.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling/thumbnail.jpg" alt="1949 Smith Corona Sterling" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1952 Smith Corona Silent </strong><a href="http://www.dersche.id/typewriters/1952SmithCoronaSilent.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1952SmithCoronaSilent/thumbnail.jpg" alt="1952 Smith Corona Silent" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1955 Smith Corona Skyriter </strong><a href="http://www.dersche.id/typewriters/1955SmithCoronaSkyriter.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1955SmithCoronaSkyriter/thumbnail.jpg" alt="1955 Smith Corona Skyriter" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>1965 SCM Sterling </strong><a href="http://www.dersche.id/typewriters/1965SCMSterling.html"><font size="1">more...</font></a>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1965SCMSterling/thumbnail.jpg" alt="1965 SCM Sterling" style="width:150px;"></p>
+            </li>
+          </ol>
         </div>
       </div>
     </div>
