--- a/TypewriterLanding.html
+++ b/TypewriterLanding.html
@@ -22,7 +22,7 @@
   <script>
   w3IncludeHTML();
   </script>
-  <section id="intro">
+  <section id="photo">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -34,6 +34,14 @@
               alt="1918 Corona 3, Distressed">
             </center>
           </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="intro">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
           <hr>
           <p>I have been collecting typewriters since June of 2012. Currently, my collection consists of somewhere
             around 40 different machines. A list of my collection with pictures and descriptions can be found below,
@@ -47,6 +55,14 @@
             Typewriter Database will likely always have a more up to date listing of my collection than this site,
             as that is where they are first uploaded. However, I will do my best to keep this page updated as well.
           </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="twdbList">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
           <hr>
           <center>
             <div id="twdb1">
