--- a/coronas.html
+++ b/coronas.html
@@ -22,13 +22,7 @@
   <script>
   w3IncludeHTML();
   </script>
-  <section class="headline-sec">
-    <div class="overlay ">
-      <h3 >The Corona Page <i class="fa fa-angle-double-right "></i></h3>
-    </div>
-  </section>
-  <!--HOME SECTION END-->
-  <section>
+  <section id="photo">
     <div class="container">
       <div class="row">
         <div class="col-md-12" style="min-height:800px;">
@@ -40,6 +34,14 @@
               alt="1936 Corona Standard, Distressed">
             </center>
           </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="coronaList">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
           <hr>
           <div class="alert alert-info" >
             Welcome to the Corona Page! This page is dedicated to my personal favorite brand of typewriters: Corona, and later Smith Corona.
