--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -22,7 +22,7 @@
   <script>
   w3IncludeHTML();
   </script>
-  <section id="typewriter-list">
+  <section id="photo">
     <div class="container">
       <div class="row">
         <div class="col-md-12" style="min-height:800px;">
@@ -34,6 +34,14 @@
               alt="1925 Corona Four, Distressed">
             </center>
           </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="typewriterList">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
           <hr>
           <div class="alert alert-info" >
             This list is probably in chronological order of the date of manufacture, but no guarantees are made.
