--- a/typewriterOtherInfo.html
+++ b/typewriterOtherInfo.html
@@ -22,7 +22,7 @@
   <script>
   w3IncludeHTML();
   </script>
-  <section id="intro">
+  <section id="photo">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -34,6 +34,14 @@
               alt="1949 Smith-Corona Sterling, Distressed">
             </center>
           </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="intro">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
           <hr>
           <p>
 
