--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -22,7 +22,7 @@
   <script>
   w3IncludeHTML();
   </script>
-  <section id="typewriter-list">
+  <section id="photo">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -34,6 +34,14 @@
               alt="1939 Corona Standard, Distressed">
             </center>
           </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="wishList">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
           <hr>
           <div class="alert alert-info" >
             This is a list of the typewriters on my wishlist. If you might be able to help me check one off, let me know! You can email me using the contact page.
