--- a/coronas.html
+++ b/coronas.html
@@ -25,7 +25,7 @@
   <section id="photo">
     <div class="container">
       <div class="row">
-        <div class="col-md-12" style="min-height:800px;">
+        <div class="col-md-12">
           <br>
           <p>
             <center>
