--- a/baldwin635.html
+++ b/baldwin635.html
@@ -58,8 +58,10 @@
           </p>
           <p>
             Unable to test the organ, as at this point it would no longer even power on, much less connect to the brand new sound system, I made
-            the decision that I could repair it. My friends and I loaded the organ into a U-Haul, and it began it's journey to Ames, Iowa. After
-            spending three hours to get it through my door, the main fuse was replaced and the organ was plugged in and connected to a suitable
+            the decision that I could repair it. My friends and I loaded the organ into a U-Haul, and it began it's journey to Ames, Iowa.
+            It made a stop in Eagle Grove, Iowa, for a few days while I got ready to return to Ames. During this time, I handcrafted a copper
+            plaque which reads "Kindly Gifted by Hope Summit Church of Rochester, MN" to be proudly displayed on the music desk. 
+            After spending three hours to get it through my door, the main fuse was replaced and the organ was plugged in and connected to a suitable
             sound system. It was time to power on the organ for the first time in years. I pressed the power switch, and nothing. It had blown
             it's new fuse. I replaced the fuse again, and once again it blew. This was not good. And so began the long process of repair and
             restoration.
