update baldwin again

--- a/baldwin635.html
+++ b/baldwin635.html
@@ -60,7 +60,7 @@
             Unable to test the organ, as at this point it would no longer even power on, much less connect to the brand new sound system, I made
             the decision that I could repair it. My friends and I loaded the organ into a U-Haul, and it began it's journey to Ames, Iowa.
             It made a stop in Eagle Grove, Iowa, for a few days while I got ready to return to Ames. During this time, I handcrafted a copper
-            plaque which reads "Kindly Gifted by Hope Summit Church of Rochester, MN" to be proudly displayed on the music desk. 
+            plaque which reads "Kindly Gifted by Hope Summit Church of Rochester, MN" to be proudly displayed on the music desk.
             After spending three hours to get it through my door, the main fuse was replaced and the organ was plugged in and connected to a suitable
             sound system. It was time to power on the organ for the first time in years. I pressed the power switch, and nothing. It had blown
             it's new fuse. I replaced the fuse again, and once again it blew. This was not good. And so began the long process of repair and
@@ -93,8 +93,8 @@
             I/O pins to be used with a very limited microcontroller such as the Arduino Uno.
           </p>
           <p>
-            I am currently working on a similar system for
-            scanning stops and pistons. It's most basic function is to scan stops and send the relevant information to the PC as MIDI commands.
+            As of Feb. 13, 2018, I am currently working on a similar system for scanning stops and pistons. It's most basic function is to scan
+            stops and send the relevant information to the PC as MIDI commands. 
             However, it must also incorporate piston functions. To any non-organists, this means it must read which stops are currently on and
             off, and be able to store that information as a preset to be recalled at the press of a specific piston, located beneath each
             keyboard. In addition to that, it must store up to 64 sets of these pistons and their relevant stop data in different memory banks
