--- a/baldwin635.html
+++ b/baldwin635.html
@@ -45,7 +45,8 @@
             drove up to Rochester with a few friends to take a look at the organ. It turned out that before I arrived, another potential
             buyer had came to take a look. They flat out told the Church that they planned to use the organ for nothing more than spare
             parts. It was decided that the Church wanted the organ to go somewhere where it could remain in use, bringing joy to others, not
-            to be parted out and destroyed.
+            to be parted out and destroyed. If they could not find anyone who would use the organ, they would let it go to the salvager, but
+            not without paying fair market value. They were willing to cut a good deal to someone who would use the organ and keep it alive.
           </p>
           <p>
             When I arrived, I explained to Pastor Jeff my intentions: I would take the organ into my home, where it would become my practice
@@ -69,7 +70,7 @@
             The problems with the organ turned out to be much greater than I originally anticipated. I decided that the issue with the fuses was
             likely the fuse holder itself, as it had been worn and would short itself. I replaced it with an equivalent circuit breaker. Finally,
             the organ would power on. The next issues I discovered was in the voices. Certain voices, most notably all of the reeds, were far too
-            quiet, to the point where they were barely audible. Other voices exhibited a very peculiar problem by which A and Ab in certain
+            quiet to the point where they were barely audible. Other voices exhibited a very peculiar problem by which A and Ab in certain
             octaves both sound at the same time, regardless of which of the two keys was pressed. My roommate and I took to calling this aweful
             noise the "duck".
           </p>
