--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -49,33 +49,43 @@
           <ol>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong></strong>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
           </ol>
           <hr>
