add wishlist item

--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -48,43 +48,48 @@
           </div>
           <ol>
             <li>
-              <strong></strong>
+              <strong>Any Corona / Smith Corona Portables</strong>
+              <p>
+                I am always looking for more Corona portables. I recently joked that my goal is to have at least one from each
+                year, from 1900 to 1970. Now I'm thinking maybe that's not so far off... I am specifically interested in the flat-top
+                Standards, Silents, and Sterlings from the 1930's. My dream machine is a 1932 Corona Sterling in maroon.
+              </p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/thumbnail.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
+            </li>
+            <li>
+              <strong>19XX Make Model</strong>
               <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
-              <strong></strong>
+              <strong>19XX Make Model</strong>
               <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
-              <strong></strong>
+              <strong>19XX Make Model</strong>
               <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
-              <strong></strong>
+              <strong>19XX Make Model</strong>
               <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
-              <strong></strong>
+              <strong>19XX Make Model</strong>
               <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
-              <strong></strong>
+              <strong>19XX Make Model</strong>
               <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
-              <strong></strong>
+              <strong>19XX Make Model</strong>
               <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
-              <strong></strong>
+              <strong>19XX Make Model</strong>
               <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
-              <strong></strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
-            </li>
-            <li>
-              <strong></strong>
+              <strong>19XX Make Model</strong>
               <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
           </ol>
