--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -51,10 +51,13 @@
               <strong>Any Corona / Smith Corona Portables</strong>
               <p>
                 I am always looking for more Corona portables. I recently joked that my goal is to have at least one from each
-                year, from 1900 to 1970. Now I'm thinking maybe that's not so far off... I am specifically interested in the flat-top
-                Standards, Silents, and Sterlings from the 1930's. My dream machine is a 1932 Corona Sterling in maroon.
+                year, from 1900 to 1970. Now I'm thinking maybe that's not so far off! All jokes aside, I am specifically interested
+                in the flat-top Standards, Silents, and Sterlings from the 1930's. My ideal daily typer is a 1932 Corona Sterling in maroon.
+                I would also love to add a green Sterling to my collection, or any with finishes other than gloss black. It goes without
+                saying that a Sterling in sterling silver is my dream machine!
               </p>
               <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/thumbnail.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard__SilverEdit.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
