--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -50,7 +50,7 @@
             <li>
               <strong>Any Corona / Smith Corona Portables</strong>
               <p>
-                I am always looking for more Corona portables. I recently joked that my goal is to have at least one from each
+                I am always looking for more Corona portables. I once joked that my goal is to have at least one from each
                 year, from 1900 to 1970. Now I'm thinking maybe that's not so far off! All jokes aside, I am specifically interested
                 in the flat-top Standards, Silents, and Sterlings from the 1930's. My ideal daily typer is a 1932 Corona Sterling in maroon.
                 I would also love to add a green Sterling to my collection, or any with finishes other than gloss black. It goes without
