--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -57,7 +57,7 @@
                 saying that a Sterling in sterling silver is my dream machine!
               </p>
               <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/thumbnail.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard__SilverEdit.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard__SilverEdit.jpg" alt="1936 Corona Standard, Color Changed to Silver" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
