--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -56,7 +56,7 @@
                 I would also love to add a green Sterling to my collection, or any with finishes other than gloss black. It goes without
                 saying that a Sterling in sterling silver is my dream machine!
               </p>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/thumbnail.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard__MaroonSmall.jpg" alt="1936 Corona Standard, Color changed to Maroon" style="width:150px;"></p>
               <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard__SilverSmall.jpg" alt="1936 Corona Standard, Color Changed to Silver" style="width:150px;"></p>
             </li>
             <li>
