--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
         <div class="col-md-12" style="min-height:800px;">
           <br>
           <p>
-            <h1>Welcome to the Derscheid Family Website!</h1>
+            <center><h1>Welcome!</h1></center>
+          </p>
+          <p>
+            My name is Mac. I am a student, a typist, and an organist. This website is a place
+            for me to put anything I like, and if you find it interesting, feel free to take a look. You will
+            find multiple pages dedicated to typewriters, as well as various pages related to some projects
+            I am currently working on. I will continue to update this site as projects progress and change, or
+            if I feel like more information is beneficial. I welcome any comments and suggestions you may have,
+            simply contact me with the contact link above. Thank you.
           </p>
         </div>
       </div>
