--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <center><h1>Welcome!</h1></center>
           </p>
           <p>
-            My name is Mac. I am a student, a typist, and an organist. This website is a place
+            My name is Mac. I am a student, a typist, an organist, and a carillonneur. This website is a place
             for me to put anything I like, and if you find it interesting, feel free to take a look. You will
             find multiple pages dedicated to typewriters, as well as various pages related to some projects
             I am currently working on. I will continue to update this site as projects progress and change, or
