test google photos

--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -85,7 +85,7 @@
             </li>
             <li>
               <strong>1927 Bing 2 </strong><a href="http://www.dersche.id/typewriters/1927Bing2.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/thumbnail.jpg" alt="1927 Bing 2" style="width:150px;"></p>
+              <p><img src="https://lh3.googleusercontent.com/cajhRicCWbehoz-ZWHER-cUERUNESPS69T83VIe3ZIperF4emioyiWPVBmBHGhLppp3OfLJjRAUBpJiBjptiVG8BOyL55l-X1Ch7ogdDDpa20SSbRyk1lJjXqWEXwl1jDc8rQVZ0Mw=w2400" alt="1927 Bing 2" style="width:150px;"></p>
             </li>
             <li>
               <strong>1927 Corona Four </strong><a href="http://www.dersche.id/typewriters/1927CoronaFour.html"><font size="1">more...</font></a>
