--- a/typewriters/1927Bing2.html
+++ b/typewriters/1927Bing2.html
@@ -45,8 +45,8 @@
             More text will go here.
           </p>
           <center>
+            <p><img src="https://lh3.googleusercontent.com/cajhRicCWbehoz-ZWHER-cUERUNESPS69T83VIe3ZIperF4emioyiWPVBmBHGhLppp3OfLJjRAUBpJiBjptiVG8BOyL55l-X1Ch7ogdDDpa20SSbRyk1lJjXqWEXwl1jDc8rQVZ0Mw=w2400" alt="1927 Bing 2 Left Angle" style="width:500px;"></p>
             <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/rtilt.jpg" alt="1927 Bing 2 Right Angle" style="width:500px;"></p>
-            <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/ltilt.jpg" alt="1927 Bing 2 Left Angle" style="width:500px;"></p>
             <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/right.jpg" alt="1927 Bing 2 Right" style="width:500px;"></p>
             <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/left.jpg" alt="1927 Bing 2 Left" style="width:500px;"></p>
             <p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/back.jpg" alt="1927 Bing 2 Back" style="width:500px;"></p>
